<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	 <TextView 
	    android:id="@+id/btStatus"
	    android:padding="10dp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textColor="@android:color/holo_red_dark"
       android:textStyle="bold"
       android:textSize="20sp"
       android:text="@string/bt_disconnected"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center" >
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/pressure"/>
                <TextView 
                    android:id="@+id/tv_pressure"
                    android:background="@drawable/card_bg"
                    android:layout_marginTop="6dp"
                    android:text="@string/placeholde_value"
                    android:layout_marginBottom="6dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="italic"
                    android:textSize="13sp"/>
                
                
            </LinearLayout>
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center" >
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/direction"/>
                <TextView 
                    android:id="@+id/tv_direction"
                    android:gravity="center"
                    android:background="@drawable/card_bg"
                    android:text="@string/placeholde_value"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:textSize="13sp"/>
            </LinearLayout>
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center" >
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/windspeed"/>
                <TextView 
                    android:id="@+id/tv_windspeed"
                    android:gravity="center"
                    android:background="@drawable/card_bg"
                    android:text="@string/placeholde_value"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:textSize="13sp"/>
            </LinearLayout>
             <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center" >
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/temperature"/>
                <TextView 
					android:id="@+id/tv_temperature"
                    android:gravity="center"
                    android:background="@drawable/card_bg"
                    android:text="@string/placeholde_value"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:textSize="13sp"/>
            </LinearLayout>
             <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center" >
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/humidity"/>
                <TextView 
                    android:id="@+id/tv_humidity"
                    android:gravity="center"
                    android:background="@drawable/card_bg"
                    android:text="@string/placeholde_value"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:textSize="13sp"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>
    
    <!-- Second Grid -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp"
        android:stretchColumns="*" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <LinearLayout 
                android:padding="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center" >
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/currentdrag"/>
                <TextView 
                    android:id="@+id/tv_currdrag"
                    android:background="@drawable/card_bg"
                    android:layout_marginTop="6dp"
                    android:text="@string/placholder_grid2"
                    android:layout_marginBottom="6dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="italic"
                    android:textSize="13sp"/>
                 <TextView 
                    android:id="@+id/tv_initdrag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold|italic"
                    android:textSize="15sp"
                    android:text="@string/initdrag"/>
                
                
            </LinearLayout>
            <LinearLayout 
                android:padding="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center" >
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/currentlift"/>
                <TextView 
                    android:id="@+id/tv_currentlift"
                    android:gravity="center"
                    android:background="@drawable/card_bg"
                    android:text="@string/placholder_grid2"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:textSize="13sp"/>
                <TextView 
                    android:id="@+id/tv_initlift"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold|italic"
                    android:textSize="15sp"
                    android:text="@string/initdrag"/>
            </LinearLayout>
            <LinearLayout 
                android:padding="3sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center" >
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/currenttilt"/>
                <TextView 
                    android:id="@+id/tv_currenttilt"
                    android:gravity="center"
                    android:background="@drawable/card_bg"
                    android:text="@string/placholder_grid2"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:textSize="13sp"/>
                <TextView 
                    android:id="@+id/tv_inittilt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold|italic"
                    android:textSize="15sp"
                    android:text="@string/initdrag"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>
	<!-- Main Content -->
	
	
	<!-- Buttons -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_bg"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:orientation="vertical" >
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_margin="20dp"
        android:stretchColumns="*" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
			<Button 
			    android:text="@string/poweron"
			    android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnInitListener"
                android:gravity="center"/>  
                             
			<Button 
			    android:text="@string/messure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnMessureListener"
                android:gravity="center"/> 
                             
			<Button 
			    android:text="@string/poweroff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:onClick="btnFinishListener"
                android:gravity="center"/>                                 
        </TableRow>
    </TableLayout>


</LinearLayout>